Fixed some css issues on small devices

--- a/assets/main.css
+++ b/assets/main.css
@@ -2,6 +2,7 @@ body {
     margin: 0px;
     font-family: monospace;
     background-color: #e9e9e9;
+    overflow: hidden;
 
     user-select: none;
     -moz-user-select: none;
